some more enhacnements to input

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
         <script src="{{url_for('static', filename='func.js')}}"></script>
     </head>
     <body>
-        <img src="/static/mic-off.svg" id="toggle" />
+        <img src="/static/mic-off.svg" id="toggle" style="display: block; margin-left: auto; margin-right: auto; width: 50%"/>
     </body>
 </html>
